Rec03/OUTPUT.txt
*********************OUTPUT*******************************
GIVING COMPILE ERROR, BUT COULD NOT FOUND WHAT IS WRONG WTIH THE PROGRAM WILL NEED HELP
ON THIS PROGRAM TO RUN IT. 
***************************************************************************************
fox04:~/datastructRec> gcc Rec03.c
Rec03.c:30:6: warning: conflicting types for âset_array_randâ [enabled by default]
 void set_array_rand(int x[], int n)
      ^
Rec03.c:13:3: note: previous implicit declaration of âset_array_randâ was here
   set_array_rand(a, 50);
   ^
Rec03.c: In function âset_array_randâ:
Rec03.c:33:1: error: âforâ loop initial declarations are only allowed in C99 mode
 for (int i = 0; i < n; i++)
 ^
Rec03.c:33:1: note: use option -std=c99 or -std=gnu99 to compile your code
Rec03.c: At top level:
Rec03.c:42:6: warning: conflicting types for âsELECTION_SORTâ [enabled by default]
 void sELECTION_SORT(int x[], int n)
      ^
Rec03.c:18:3: note: previous implicit declaration of âsELECTION_SORTâ was here
   sELECTION_SORT(a, 50);
   ^
Rec03.c:59:6: warning: conflicting types for âmERGEâ [enabled by default]
 void mERGE(int a[], int na, int b[], int nb, int c[], int nc)
      ^
Rec03.c:23:3: note: previous implicit declaration of âmERGEâ was here
   mERGE(a, 50, b, 70, c, 120); 
   ^
Rec03.c:71:6: warning: conflicting types for âpRINT_ARRAYâ [enabled by default]
 void pRINT_ARRAY(char *name, int x[], int n)
      ^
Rec03.c:27:3: note: previous implicit declaration of âpRINT_ARRAYâ was here
   pRINT_ARRAY("Array c", c, 120);
